--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.4",
-    "@angular/cdk": "^10.0.2",
-    "@angular/common": "~10.0.4",
+    "@angular/animations": "^10.0.4",
+    "@angular/cdk": "^10.1.0",
+    "@angular/common": "^10.0.4",
     "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
+    "@angular/core": "^10.0.4",
+    "@angular/forms": "^10.0.4",
     "@angular/material": "^10.0.2",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
-    "bootstrap": "^3.3.7",
-    "firebase": "^7.16.1",
+    "@fortawesome/fontawesome-free": "^5.14.0",
+    "@types/chart.js": "^2.9.23",
+    "angular-bootstrap-md": "^9.3.1",
+    "animate.css": "^4.1.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^1.9.1",
+    "material-design-icons": "^3.0.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.0",
     "tslib": "^2.0.0",
