--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@types/chart.js": "^2.9.23",
     "angular-bootstrap-md": "^9.3.1",
-    "animate.css": "^4.1.0",
+    "animate.css": "^4.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
+    "jarallax": "^1.12.1",
     "jquery": "^1.9.1",
     "material-design-icons": "^3.0.1",
     "popper.js": "^1.16.1",
