--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
     "jarallax": "^1.12.1",
-    "jquery": "^1.9.1",
+    "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
+    "ng2-date-picker": "^10.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.0",
@@ -39,11 +40,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.3",
-    "@angular/cli": "~10.0.3",
+    "@angular/cli": "^10.0.7",
     "@angular/compiler-cli": "~10.0.4",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
