--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.4",
-    "@angular/cdk": "^10.1.0",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "^10.0.4",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "^10.0.4",
     "@angular/forms": "^10.0.4",
-    "@angular/material": "^10.0.2",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@types/chart.js": "^2.9.23",
     "angular-bootstrap-md": "^9.3.1",
+    "angular-notifier": "^6.0.1",
     "animate.css": "^4.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.5.0",
@@ -31,7 +32,10 @@
     "jarallax": "^1.12.1",
     "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
+    "material-icons": "^0.3.1",
     "ng2-date-picker": "^10.0.0",
+    "ng5-slider": "^1.2.4",
+    "ngx-input-file": "^8.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "rxjs-compat": "^6.6.0",
